--- a/bantuan.html
+++ b/bantuan.html
@@ -5,21 +5,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bantuan | UI Transformer</title>
-  <meta name="description" content="UI Transformer by L Y Я A - Konversi desain ke Tailwind CSS dengan AI.">
-  <link rel="canonical" href="https://daffadevhosting.github.io/daffadevhosting/bantuan">
 
-  <link type="application/atom+xml" rel="alternate" href="https://daffadevhosting.github.io/daffadevhosting/feed.xml" title="UI Generator" />
+  <title>Bantuan | UI Transformer - Konversi Desain ke Tailwind CSS dengan AI</title>
+
+  <meta name="description" content="UI Transformer oleh L Y Я A: Konversi desain UI ke kode Tailwind CSS secara otomatis dengan AI. Solusi cepat untuk developer dan desainer.">
+
+  <meta name="keywords" content="UI Transformer, AI to Tailwind CSS, konversi desain ke kode, Tailwind CSS AI, L Y Я A, otomatisasi desain, developer tools, web design">
+
+  <meta property="og:title" content="Bantuan">
+  <meta property="og:description" content="Konversi desain UI ke kode Tailwind CSS secara otomatis dengan AI. Solusi cepat untuk developer dan desainer.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="/daffadevhosting/bantuan">
+  <meta property="og:image" content="/assets/images/og-image.jpg"> <meta property="og:site_name" content="UI Transformer">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Bantuan">
+  <meta name="twitter:description" content="Konversi desain UI ke kode Tailwind CSS secara otomatis dengan AI. Solusi cepat untuk developer dan desainer.">
+  <meta name="twitter:image" content="/assets/images/og-image.jpg"> <meta name="twitter:creator" content="@namatwitteranda"> <link rel="canonical" href="/daffadevhosting/bantuan">
+
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" as="style">
+  <link rel="preload" href="/daffadevhosting/assets/css/tailwind.css" as="style">
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" as="script">
+
+  <link type="application/atom+xml" rel="alternate" href="/daffadevhosting/feed.xml" title="UI Generator" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="/daffadevhosting/assets/css/tailwind.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  
-<!-- Highlight.js CSS theme -->
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
-<!-- Highlight.js library -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-<!-- HTML language support -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/xml.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.5/dist/purify.min.js"></script>
@@ -53,6 +68,7 @@ const MIDTRANS_WORKER_URL = "https://midtranspay.androidbutut.workers.dev/snap";
 </script>
 
 </head>
+
 
     <body class="bg-[#1E1E1E] text-white font-sans h-screen flex flex-col md:flex-row overflow-hidden">
       <div id="ai-loader" class="fixed inset-0 z-50 flex items-center justify-center" style="background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);background-attachment: fixed;">
@@ -150,14 +166,14 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
 
 
       <aside id="sidebar" class="w-full md:w-20 bg-[#121212] p-4 flex align-center md:flex-col gap-6 border-b md:border-b-0 md:border-r border-gray-700">
-  <div class="flex justify-between items-center w-full md:block">
+  <div class="flex lg:justify-between md:justify-self-start gap-2 items-center w-full md:block">
     <h1 class="text-2xl mb-3 font-bold hidden md:block">L Y Я A</h1>
     <div class="bg-[#2A2A2A] glass text-sm rounded px-2 py-1 md:w-fit">v.2.5</div>
     <a href="/daffadevhosting/pricing" class="text-sm bg-pink-700 md:hidden block text-white px-3 py-1 rounded">Upgrade PRO</a>
   </div>
   
       <!-- Tombol Chat -->
-      <button id="chat-toggle" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline transition">
+      <button id="chat-toggle" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
         <i class="fa-solid fa-comments text-2xl"></i>
       </button>
   <button onclick="openTermsModal()" title="term & faq" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
@@ -166,6 +182,10 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
   <a href="https://github.com/daffadevhosting/daffadevhosting/" target="_blank" title="Github" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
     <i class="fa-brands fa-git-alt text-3xl"></i>
   </a>
+  <!-- Toggle Output Panel (Mobile only) -->
+  <button onclick="toggleOutputPanel()" class="md:hidden cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
+    <i class="fa-solid fa-code text-2xl"></i>
+  </button>
 </aside>
 <div id="model-selector"
   class="fixed z-50 bottom-20 md:left-24 left-4 right-4 md:right-auto w-auto max-w-xs bg-[#1E1E1E] backdrop-blur-md rounded-xl shadow-xl border border-gray-700 p-4 space-y-4 opacity-0 scale-95 pointer-events-none">
@@ -932,12 +952,19 @@ document.addEventListener("DOMContentLoaded", () => {
     });
 
     const timeline = gsap.timeline({ defaults: { duration: 1.8, ease: "power3.out" } });
+
+    const isDesktop = window.matchMedia("(min-width: 1024px)").matches;
+
     timeline
       .from("#topbar", { y: -80, opacity: 0 }, 0.2)
       .from("#sidebar", { y: 80, opacity: 0 }, 0.4)
-      .from("#input-panel", { x: -100, opacity: 0 }, 0.6)
-      .from("#output-panel", { x: 100, opacity: 0 }, 0.8)
-      .from("footer", { y: 60, opacity: 0, ease: "bounce.out" }, 1.0);
+      .from("#input-panel", { x: -100, opacity: 0 }, 0.6);
+
+    if (isDesktop) {
+      timeline.from("#output-panel", { x: 100, opacity: 0 }, 0.8);
+    }
+
+    timeline.from("footer", { y: 60, opacity: 0, ease: "bounce.out" }, 1.0);
   }, 3000);
 });
 </script>
