--- a/index.html
+++ b/index.html
@@ -5,21 +5,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>UI Generator | UI Transformer</title>
-  <meta name="description" content="UI Transformer by L Y Я A - Konversi desain ke Tailwind CSS dengan AI.">
-  <link rel="canonical" href="https://daffadevhosting.github.io/daffadevhosting/">
 
-  <link type="application/atom+xml" rel="alternate" href="https://daffadevhosting.github.io/daffadevhosting/feed.xml" title="UI Generator" />
+  <title>UI Generator | UI Transformer - Konversi Desain ke Tailwind CSS dengan AI</title>
+
+  <meta name="description" content="UI Transformer oleh L Y Я A: Konversi desain UI ke kode Tailwind CSS secara otomatis dengan AI. Solusi cepat untuk developer dan desainer.">
+
+  <meta name="keywords" content="UI Transformer, AI to Tailwind CSS, konversi desain ke kode, Tailwind CSS AI, L Y Я A, otomatisasi desain, developer tools, web design">
+
+  <meta property="og:title" content="UI Generator">
+  <meta property="og:description" content="Konversi desain UI ke kode Tailwind CSS secara otomatis dengan AI. Solusi cepat untuk developer dan desainer.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="/daffadevhosting/">
+  <meta property="og:image" content="/assets/images/og-image.jpg"> <meta property="og:site_name" content="UI Transformer">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="UI Generator">
+  <meta name="twitter:description" content="Konversi desain UI ke kode Tailwind CSS secara otomatis dengan AI. Solusi cepat untuk developer dan desainer.">
+  <meta name="twitter:image" content="/assets/images/og-image.jpg"> <meta name="twitter:creator" content="@namatwitteranda"> <link rel="canonical" href="/daffadevhosting/">
+
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" as="style">
+  <link rel="preload" href="/daffadevhosting/assets/css/tailwind.css" as="style">
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" as="script">
+
+  <link type="application/atom+xml" rel="alternate" href="/daffadevhosting/feed.xml" title="UI Generator" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="/daffadevhosting/assets/css/tailwind.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  
-<!-- Highlight.js CSS theme -->
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
-<!-- Highlight.js library -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-<!-- HTML language support -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/xml.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.5/dist/purify.min.js"></script>
@@ -53,6 +68,7 @@ const MIDTRANS_WORKER_URL = "https://midtranspay.androidbutut.workers.dev/snap";
 </script>
 
 </head>
+
 
     <body class="bg-[#1E1E1E] text-white font-sans h-screen flex flex-col md:flex-row overflow-hidden">
       <div id="ai-loader" class="fixed inset-0 z-50 flex items-center justify-center" style="background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);background-attachment: fixed;">
@@ -150,14 +166,14 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
 
 
       <aside id="sidebar" class="w-full md:w-20 bg-[#121212] p-4 flex align-center md:flex-col gap-6 border-b md:border-b-0 md:border-r border-gray-700">
-  <div class="flex justify-between items-center w-full md:block">
+  <div class="flex lg:justify-between md:justify-self-start gap-2 items-center w-full md:block">
     <h1 class="text-2xl mb-3 font-bold hidden md:block">L Y Я A</h1>
     <div class="bg-[#2A2A2A] glass text-sm rounded px-2 py-1 md:w-fit">v.2.5</div>
     <a href="/daffadevhosting/pricing" class="text-sm bg-pink-700 md:hidden block text-white px-3 py-1 rounded">Upgrade PRO</a>
   </div>
   
       <!-- Tombol Chat -->
-      <button id="chat-toggle" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline transition">
+      <button id="chat-toggle" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
         <i class="fa-solid fa-comments text-2xl"></i>
       </button>
   <button onclick="openTermsModal()" title="term & faq" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
@@ -166,6 +182,10 @@ if (!lastSeen || now - lastSeen > 24 * 60 * 60 * 1000) {
   <a href="https://github.com/daffadevhosting/daffadevhosting/" target="_blank" title="Github" class="cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
     <i class="fa-brands fa-git-alt text-3xl"></i>
   </a>
+  <!-- Toggle Output Panel (Mobile only) -->
+  <button onclick="toggleOutputPanel()" class="md:hidden cursor-pointer text-sm text-center text-gray-400 hover:text-blue-400 transition underline">
+    <i class="fa-solid fa-code text-2xl"></i>
+  </button>
 </aside>
 <div id="model-selector"
   class="fixed z-50 bottom-20 md:left-24 left-4 right-4 md:right-auto w-auto max-w-xs bg-[#1E1E1E] backdrop-blur-md rounded-xl shadow-xl border border-gray-700 p-4 space-y-4 opacity-0 scale-95 pointer-events-none">
@@ -321,7 +341,7 @@ function renderUserProfile(user, quota) {
 
 }
 </script>
-                  <div class="flex flex-col lg:flex-row flex-1 overflow-auto scrollbar-hidden">
+                  <div class="flex flex-col lg:flex-row flex-1 overflow-auto scrollbar-hidden relative">
           <div id="input-panel" class="relative w-full h-full lg:w-1/2 p-4 space-y-4 overflow-auto border-b lg:border-b-0 lg:border-r border-gray-700 scrollbar-hidden">
 <style>
 @keyframes spin {
@@ -349,7 +369,7 @@ function renderUserProfile(user, quota) {
   <pre class="mb-4 overflow-x-hidden text-wrap"><code id="ai-output">... (code AI response ) ...</code></pre>
     
   </div>
-  <div class="sticky bottom-0 bg-[#121212] border border-gray-700 rounded-xl p-4">
+  <div class="sticky bottom-0 bg-[#121212] border border-gray-700 rounded-xl p-2">
   <div class="flex justify-between items-center-safe w-full">
     <p class="text-xs text-gray-400 text-left">
       Model aktif: <span id="active-model-label" class="text-green-300">llama-3.2-1b</span>
@@ -592,9 +612,27 @@ async function handleTransformClick() {
   });
 </script>
 
-          <div id="output-panel" class="w-full lg:w-full bg-[#282c34] overflow-hidden hidden md:block p-4 relative">
+<script>
+  function toggleOutputPanel() {
+    const panel = document.getElementById("output-panel");
+    const isHidden = panel.classList.contains("translate-y-[100vh]");
+
+    if (isHidden) {
+      panel.classList.remove("translate-y-[100vh]", "hidden");
+      panel.classList.add("translate-y-0");
+    } else {
+      panel.classList.remove("translate-y-0");
+      panel.classList.add("translate-y-[100vh]");
+      setTimeout(() => {
+        panel.classList.add("hidden");
+      }, 300);
+    }
+  }
+</script>
+          <div id="output-panel" class="absolute lg:static inset-x-0 bottom-0 z-50 bg-[#282c34] md:bg-transparent md:p-0 px-0 p-4 shadow-lg transform transition-transform duration-300 ease-in-out
+         w-full h-[90vh] md:h-auto overflow-y-auto md:overflow-hidden hidden lg:block translate-y-[100vh] lg:translate-y-0">
   <!-- Tombol Kanan Atas -->
-  <div class="absolute top-2 right-2 flex items-center gap-2 z-10">
+  <div class="fixed bottom-4 md:bottom-2 right-4 md:right-2 flex items-center gap-4 z-10">
     <button
       onclick="saveEditedOutput()"
       id="save-button"
@@ -604,14 +642,14 @@ async function handleTransformClick() {
     <button
       onclick="toggleEditorMode()"
       id="edit-button"
-      class="cursor-pointer w-10 h-10 text-white bg-yellow-600 hover:bg-yellow-700 focus:ring-4 focus:outline-none focus:ring-yellow-300 text-center font-medium rounded-full text-sm p-2"
+      class="cursor-pointer opacity-60 w-10 h-10 text-white bg-yellow-600 hover:bg-yellow-700 focus:ring-4 focus:outline-none focus:ring-yellow-300 text-center font-medium rounded-full text-sm p-2"
       title="Edit HTML"
     ><i class="fa-solid fa-pen"></i></button>
 
     <button
       onclick="downloadHTML()"
       id="download-button"
-      class="cursor-pointer w-10 h-10 text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-300 text-center font-medium rounded-full text-sm p-2"
+      class="cursor-pointer hidden md:block opacity-60 w-10 h-10 text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-green-300 text-center font-medium rounded-full text-sm p-2"
       title="Download HTML"
     >
       <i class="fa-solid fa-download"></i>
@@ -620,20 +658,20 @@ async function handleTransformClick() {
     <button
       onclick="showPreview()"
       id="preview-button"
-      class="cursor-pointer w-10 h-10 text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 text-center font-medium rounded-full text-sm p-2"
+      class="cursor-pointer hidden md:block opacity-60 w-10 h-10 text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 text-center font-medium rounded-full text-sm p-2"
       title="Preview"
     ><i class="fa-solid fa-eye"></i></button>
   </div>
 
   <!-- Area Editor/Code -->
-  <div id="output-editor" class="relative h-[420px]">
+  <div id="output-editor" class="relative h-[90vh] md:h-[550px]">
     <!-- Code (readonly mode) -->
-    <pre id="output-readonly" class="bg-[#282c34] text-sm font-mono text-green-300 p-4 h-full rounded-md overflow-y-auto overflow-x-hidden min-h-96 whitespace-pre-wrap break-words hljs text-wrap transition-opacity duration-300 scrollbar-hidden"></pre>
+    <pre id="output-readonly" class="bg-[#282c34] text-sm font-mono text-green-300 md:pt-4 pt-28 p-4 h-full overflow-y-auto overflow-x-hidden min-h-100 whitespace-pre-wrap break-words hljs text-wrap transition-opacity duration-300 scrollbar-hidden"></pre>
 
     <!-- Textarea (edit mode) -->
     <textarea
       id="output-editable"
-      class="hidden h-full w-full bg-[#1e1e1e] text-green-300 font-mono text-sm p-4 mt-2 rounded-md border border-gray-700 resize-vertical focus:outline-none focus:ring-2 focus:ring-blue-500"
+      class="hidden h-full w-full bg-[#1e1e1e] text-green-300 font-mono text-sm p-4 pt-28 border border-gray-700 resize-vertical focus:outline-none focus:ring-2 focus:ring-blue-500"
       rows="16"
       spellcheck="false"
     ></textarea>
@@ -646,7 +684,7 @@ async function handleTransformClick() {
     <iframe
       id="previewFrame"
       class="w-full h-full rounded-xl border-0"
-      sandbox="allow-scripts"
+      sandbox="allow-same-origin allow-scripts"
     ></iframe>
     <button
       onclick="closeModal()"
@@ -776,6 +814,7 @@ if (frame?.src?.startsWith("blob:")) {
   }, 300); // harus sama dengan durasi transition-nya
 }
 </script>
+
 
         </div>
               <footer class="text-sm text-center text-gray-500 py-6  border-t border-gray-700">
@@ -1388,12 +1427,19 @@ document.addEventListener("DOMContentLoaded", () => {
     });
 
     const timeline = gsap.timeline({ defaults: { duration: 1.8, ease: "power3.out" } });
+
+    const isDesktop = window.matchMedia("(min-width: 1024px)").matches;
+
     timeline
       .from("#topbar", { y: -80, opacity: 0 }, 0.2)
       .from("#sidebar", { y: 80, opacity: 0 }, 0.4)
-      .from("#input-panel", { x: -100, opacity: 0 }, 0.6)
-      .from("#output-panel", { x: 100, opacity: 0 }, 0.8)
-      .from("footer", { y: 60, opacity: 0, ease: "bounce.out" }, 1.0);
+      .from("#input-panel", { x: -100, opacity: 0 }, 0.6);
+
+    if (isDesktop) {
+      timeline.from("#output-panel", { x: 100, opacity: 0 }, 0.8);
+    }
+
+    timeline.from("footer", { y: 60, opacity: 0, ease: "bounce.out" }, 1.0);
   }, 3000);
 });
 </script>
